unpackaged/main/default/objects/RICSC_Phone__c/RICSC_Phone__c.object-meta.xml
<CustomObject>
    <description>This object is used to collect  the Phones of the related Local records.</description>
    <label>Phone</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Phone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RICSC_VCASharingGolden__c</fullName>
        <label>VCA Sharing Golden</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RICSC_VCASharingLocal__c</fullName>
        <label>VCA Sharing Local</label>
    </sharingReasons>
</CustomObject>