unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_CountryofOrigin__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryofOrigin__c</fullName>
        <description>Country of origin of client</description>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Country</valueSetName>
        </valueSet>
    </CustomField>