unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_DefaultGRPhone__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultGRPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default GR Phone</label>
        <type>Checkbox</type>
    </CustomField>