unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_DefaultPhone__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify which is the primary phone. For the LR comes from the Source System in the GR is populated  based on rules</description>
        <label>Default Phone</label>
        <type>Checkbox</type>
    </CustomField>