unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_Last8DigitsNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Last8DigitsNumber__c</fullName>
        <description>A formula field which converts the number field to an 8 digit string</description>
        <formula>RIGHT(SUBSTITUTE(RICSC_Phone__c, "-", ""), 8)</formula>
        <label>Last 8 digits number</label>
        <type>Text</type>
    </CustomField>