unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_Phone__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Phone__c</fullName>
        <description>Standard phone field</description>
        <label>Phone</label>
        <type>Phone</type>
    </CustomField>