unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_PhoneNoSpaces__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PhoneNoSpaces__c</fullName>
        <description>Technical field for removing special char from phone</description>
        <formula>SUBSTITUTE( RICSC_Phone__c ," ","")</formula>
        <label>Phone (NoSpaces)</label>
        <type>Text</type>
    </CustomField>