unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_PhoneType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PhoneType__c</fullName>
        <description>Picklist field to capture the type of phone number</description>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Mr</fullName>
                </value>
                <value>
                    <fullName>Business Ms</fullName>
                </value>
                <value>
                    <fullName>Invalid Phone</fullName>
                </value>
                <value>
                    <fullName>Ivalid Phone</fullName>
                    <isActive>false</isActive>
                    <label>Ivalid Phone</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Mobile Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>