unpackaged/main/default/objects/RICSC_Phone__c/fields/RICSC_SMSEnabled__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SMSEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate whether or not sms is available for this phone number</description>
        <label>SMS Enabled</label>
        <type>Checkbox</type>
    </CustomField>